# faker-ai-provider

./: AGENTS.md  LICENSE  README.md  demo.ipynb  pyproject.toml  showcase.py
.github/workflows/: tests.yml
faker_ai/: __init__.py  model_correlations.py  provider.py  types.py
tests/: test_provider.py
