[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "faker-ai-provider"
version = "1.0.2"
description = "Generate realistic AI/ML test data: 65+ models, 45+ companies, 25+ frameworks, 30+ datasets, architectures, tasks, and parameters"
readme = "README.md"
authors = [{name = "Rodrigo Nogueira", email = "rodrigo.b.nogueira@gmail.com"}]
license = {text = "MIT"}
keywords = ["faker", "ai", "ml", "machine-learning", "fake-data", "testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "faker>=18.0.0",
]

[project.urls]
Homepage = "https://github.com/rodrigobnogueira/faker-ai"
Repository = "https://github.com/rodrigobnogueira/faker-ai"

[tool.setuptools.packages.find]
where = ["."]
